refactor(events): bind Lua event names to typed contexts